Fix header spacing

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -44,6 +44,8 @@ h2
   font-weight: 400
   b
     font-weight: 500
+  padding-top: 1em
+  padding-bottom: 1em
 
 q
   color: white
